fix(route): fix docs
