# src/routers/example.route.ts
@@ -1,16 +1,22 @@
 //实例路由模块，该文件负责定义路由规则
-
+/**
+ * @swagger
+ * tags:
+ *   name: 数据库测试路由
+ *   description: 用于测试数据库最基本的功能
+ *   baseurl: /v1/example
+ */
 import Router from 'koa-router';
 const router = new Router({ prefix: '/v1/example' });
 import Controllers from '../controllers/example.controller';
 
 /**
  * @swagger
- * /v1/example/post:
+ * /example/post:
  *   post:
  *     summary: 测试数据库插入
  *     description: 测试数据库插入
- *     tags: [数据库示例]
+ *     tags: [数据库测试路由]
  *     produces:
  *     - application/json
  *     parameters: # 请求参数：
@@ -37,11 +43,11 @@ router.post('/post', Controllers.post);
 
 /**
  * @swagger
- * /v1/example/delete:
+ * /example/delete:
  *   delete:
  *     summary: 测试数据库删除
  *     description: 测试数据库删除
- *     tags: [数据库示例]
+ *     tags: [数据库测试路由]
  *     produces:
  *     - application/json
  *     parameters: # 请求参数：
@@ -58,11 +64,11 @@ router.delete('/delete', Controllers.delete);
 
 /**
  * @swagger
- * /v1/example/get:
+ * /example/get:
  *   get:
  *     summary: 测试数据库查询
  *     description: 测试数据库查询
- *     tags: [数据库示例]
+ *     tags: [数据库测试路由]
  *     responses:
  *       200:
  *         description:
@@ -72,11 +78,11 @@ router.get('/get', Controllers.get);
 
 /**
  * @swagger
- * /v1/example/put:
+ * /example/put:
  *   put:
  *     summary: 测试数据库更新
  *     description: 测试数据库更新
- *     tags: [数据库示例]
+ *     tags: [数据库测试路由]
  *     produces:
  *     - application/json
  *     parameters: # 请求参数：
